@@ -1,5 +1,6 @@
 Version 2.02.188 - 
 ==================================
+  Enhance lvdisplay to report raid availiable/partial.
   Enhance error handling for fsadm and hanled correct fsck result.
   Stop logging rename errors from persintent filter.
   Dmeventd lvm plugin ignores higher reserved_stack lvm.conf values.
